tests/grammar/builtins/operator/operator_fail_1/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:2:5
  |
2 | b = None + 1
  |     ^ unsupported operand type(s) for +: 'NoneType' and 'int(1)'
  |